--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           <!--Start of a New Row-->
           <div class="row mt-5">
             <!--Start of a New Col-->
-            <div class="col-4">
+            <div class="col-12 col-xl-4">
 
               <!-- Start Of Card 1-->
               <div class="card">
@@ -133,7 +133,7 @@
             </div>
 
             <!-- Start of New Col 2 -->
-            <div class="col-4">
+            <div class="col-12 col-xl-4">
               <!-- Start of Card 2-->
               <div class="card">
                 <img src="Images/Homeless_2.jpg" class="card-img-top" alt="...">
@@ -148,7 +148,7 @@
             <!-- End of New Col 2-->
 
             <!-- Start of New Col 3 -->
-            <div class="col-4">
+            <div class="col-12 col-xl-4">
               <!-- Start of Card 3-->
               <div class="card">
                 <img src="Images/Homeless_3.jpg" class="card-img-top" alt="...">
@@ -170,7 +170,7 @@
           <!--Start of a New Row-->
           <div class="row mt-5">
             <!--Start of a New Col-->
-            <div class="col-4">
+            <div class="col-12 col-xl-4">
 
               <!-- Start Of Card 1-->
               <div class="card">
@@ -185,7 +185,7 @@
             </div>
 
             <!-- Start of New Col 2 -->
-            <div class="col-4">
+            <div class="col-12 col-xl-4">
               <!-- Start of Card 2-->
               <div class="card">
                 <img src="Images/Homeless_2.jpg" class="card-img-top" alt="...">
@@ -200,7 +200,7 @@
             <!-- End of New Col 2-->
 
             <!-- Start of New Col 3 -->
-            <div class="col-4">
+            <div class="col-12 col-xl-4">
               <!-- Start of Card 3-->
               <div class="card">
                 <img src="Images/Homeless_3.jpg" class="card-img-top" alt="...">
