--- a/login.html
+++ b/login.html
@@ -1,12 +1,102 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Login</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Login</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+</head>
+
+<body>
+  <div class="container">
+    <div class="row">
+      <div class="text-center">
+      <!-- Register (Hidden) -->
+      <div class="register" id='register' style="width:50%;">
+        <h2 style="margin:40px 0px">Create Account</h2>
+        <input class="mb-3 form-control" type="text" name="newUsername" placeholder="Username: "><br>
+        <input class="mb-3 form-control" type="text" name="newEmail" placeholder="Email: "><br>
+        <input class="mb-3 form-control" type="text" name="newAddress" placeholder="Address: "><br>
+        <input class="mb-3 form-control" type="password" name="newPassword" placeholder="Password: "><br>
+        <input class="mb-3 form-control" type="password" name="newConfirmPassword" placeholder="Confirm Password: "><br><br><br>
+        <button class="btn btn-primary mb-3" type="submit" name="create">Create</button>
+        <button class="btn btn-primary mb-3" type="submit" name="cancel" onclick="closeRegister()">Cancel</button>
+      </div>
+
+      <!-- Reset Password (Hidden) -->
+      <div class="reset" id='reset' style="width:50%;">
+        <h2 style="margin:40px 0px">Reset Password</h2>
+        <input class="mb-3 form-control" type="text" name="newEmail" placeholder="Email: "><br>
+        <button class="btn btn-primary mb-3" type="submit" name="create">Reset</button>
+        <button class="btn btn-primary mb-3" type="submit" name="cancel" onclick="closeReset()">Cancel</button>
+      </div>
+
+      <!-- Main Login -->
+        <img src="icons/profile.png" style="width:100px; height:100px;" class="mb-3">
+        <h2 class="mb-3">Login</h2>
+        <form action="">
+          <div class="mb-3">
+            <input type="text" class="form-control" placeholder="Username" style="width:50%; margin: auto;">
+          </div>
+          <div class="mb-3">
+            <input type="password" class="form-control" placeholder="Password" style="width:50%; margin:auto">
+          </div>
+          <button class="btn btn-primary mb-3" type="submit" name="login">Login</button>
+        </form>
+
+        <a href="#" onclick="openRegister()">Sign up Here</a><br>
+        <a href="#" onclick="openReset()">Forget Password?</a><br>
+        <hr>
+        <button class="btn btn-primary mb-3" type="submit">Sign in With Google</button>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"></script>
+
+  <script>
+    let register = document.getElementById('register')
+    let forget = document.getElementById('reset')
+
+    function openRegister() {
+      register.classList.add('open-register')
+    }
+    function closeRegister() {
+      register.classList.remove('open-register')
+    }
+    function openReset() {
+      forget.classList.add('open-reset')
+    }
+    function closeReset() {
+      forget.classList.remove('open-reset')
+    }
+  </script>
+
+</body>
+
+<style>
+  .container {
+    width: 80%;
+    margin-top: 120px;
+  }
+  .register, .reset {
+    background-color: aqua;
+    border-radius: 5%;
+    text-align: center;
+    padding: 20px;
+    position: absolute;
+    visibility: hidden;
+  }
+  .open-register {
+    visibility: visible;
+  }
+  .open-reset {
+    visibility: visible;
+  }
+</style>
+
 </html>
+
