--- a/profile.html
+++ b/profile.html
@@ -6,6 +6,43 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   </head>
   <body>
+    <!--Sticky Top Nav Bar Section-->
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light px-5">
+      <!-- Navbar Logo -->
+      <a class="navbar-brand" href="#">RoofBlanket</a>
+      <!-- End Of Navbar Logo -->
+
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <!-- Nav Bar Content -->
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <!--Nav Links-->
+        <ul class="navbar-nav">
+          <!--Call User's Profile Name-->
+          <li class="navbar-text mx-5">
+            Hello, Wai Soon
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="./profile.html">Profile</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Features</a>
+          </li>
+          <li class="nav-item" style="margin-right: 30px;">
+            <a class="nav-link" href="#">Pricing</a>
+          </li>
+          <li class="nav-item">
+            <button type="button" class="btn btn-outline-primary" href="login.html">Login</button>
+          </li>
+        </ul>
+        <!-- End Of Nav Links-->
+      </div>
+    <!-- End Of Nav Bar Content -->
+    </nav>
+    <!-- End Of Sticky Top Nav Bar Section -->
+
     <h1>Hello, world!</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   </body>
