--- a/profile.html
+++ b/profile.html
@@ -43,7 +43,16 @@
     </nav>
     <!-- End Of Sticky Top Nav Bar Section -->
 
-    <h1>Hello, world!</h1>
+    
+    <!-- Container -->
+    <div class="container">
+      <div class="row">
+        <div id="leftBar" class="col-3" style="background-color: red;"></div>
+        <div id="rightBar" class="col-9" style="background-color: blue;"></div>
+      </div>
+    </div>
+
+    <!-- End of Container -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   </body>
 </html>
