--- a/profile.html
+++ b/profile.html
@@ -47,8 +47,15 @@
     <!-- Container -->
     <div class="container">
       <div class="row">
-        <div id="leftBar" class="col-3" style="background-color: red;"></div>
-        <div id="rightBar" class="col-9" style="background-color: blue;"></div>
+        <div id="leftBar" class="col-3" style="background-color: red;">
+          <ul>
+            <li>Edit Profile</li>
+            <li>Change Password</li>
+          </ul>
+        </div>
+        <div id="rightBar" class="col-9" style="background-color: blue;">
+          <!-- form -->
+        </div>
       </div>
     </div>
 
