--- a/profile.html
+++ b/profile.html
@@ -47,13 +47,13 @@
     <!-- Container -->
     <div class="container">
       <div class="row">
-        <div id="leftBar" class="col-3" style="background-color: red;">
+        <div id="profile-LeftBar" class="col-3" style="background-color: red;">
           <ul>
             <li>Edit Profile</li>
             <li>Change Password</li>
           </ul>
         </div>
-        <div id="rightBar" class="col-9" style="background-color: blue;">
+        <div id="profile-RightBar" class="col-9" style="background-color: blue;">
           <!-- form -->
         </div>
       </div>
