--- a/profile.html
+++ b/profile.html
@@ -55,6 +55,27 @@
         </div>
         <div id="profile-RightBar" class="col-9" style="border: 3px solid blue;">
           <!-- form -->
+          <form>
+            <h3>Your Profile</h3>
+            <div class="mb-3">
+              <label for="profile-username" class="form-label">Password</label>
+              <input type="text" class="form-control" id="profile-username">
+            </div>
+            <div class="mb-3">
+              <label for="profile-firstname" class="form-label">Password</label>
+              <input type="text" class="form-control" id="profile-firstname">
+            </div>
+            <div class="mb-3">
+              <label for="profile-lastname" class="form-label">Password</label>
+              <input type="text" class="form-control" id="profile-lastname">
+            </div>
+            <div class="mb-3">
+              <label for="profile-email" class="form-label">Email address</label>
+              <input type="email" class="form-control" id="profile-email">
+            </div>
+            
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
         </div>
       </div>
     </div>
