--- a/profile.html
+++ b/profile.html
@@ -58,15 +58,15 @@
           <form>
             <h3>Your Profile</h3>
             <div class="mb-3">
-              <label for="profile-username" class="form-label">Password</label>
+              <label for="profile-username" class="form-label">Username</label>
               <input type="text" class="form-control" id="profile-username">
             </div>
             <div class="mb-3">
-              <label for="profile-firstname" class="form-label">Password</label>
+              <label for="profile-firstname" class="form-label">First Name</label>
               <input type="text" class="form-control" id="profile-firstname">
             </div>
             <div class="mb-3">
-              <label for="profile-lastname" class="form-label">Password</label>
+              <label for="profile-lastname" class="form-label">Last Name</label>
               <input type="text" class="form-control" id="profile-lastname">
             </div>
             <div class="mb-3">
