--- a/profile.html
+++ b/profile.html
@@ -73,6 +73,10 @@
               <label for="profile-email" class="form-label">Email address</label>
               <input type="email" class="form-control" id="profile-email">
             </div>
+            <div class="mb-3 rounded-pill d-flex">
+              <label for="profile-username" class="form-label">Username</label>
+              <input type="text" class="form-control" id="profile-username">
+            </div>
             
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>
