--- a/profile.html
+++ b/profile.html
@@ -73,7 +73,7 @@
               <label for="profile-email" class="form-label">Email address</label>
               <input type="email" class="form-control" id="profile-email">
             </div>
-            <div class="mb-3 rounded-pill d-flex align-items-center border border-dark">
+            <div class="mb-3 rounded-pill d-flex align-items-center border border-dark px-1">
               <label for="profile-username" class="form-label">Username</label>
               <input type="text" class="form-control" id="profile-username">
             </div>
