--- a/profile.html
+++ b/profile.html
@@ -75,7 +75,7 @@
             </div>
             <div class="mb-3 rounded-pill d-flex align-items-center border border-dark px-1">
               <label for="profile-username" class="form-label">Username</label>
-              <input type="text" class="form-control" id="profile-username">
+              <input type="text" id="profile-username">
             </div>
             
             <button type="submit" class="btn btn-primary">Submit</button>
