--- a/profile.html
+++ b/profile.html
@@ -74,7 +74,7 @@
               <input type="email" class="form-control" id="profile-email">
             </div>
             <div class="mb-3 rounded-pill d-flex align-items-center border border-dark px-3">
-              <label for="profile-username" class="form-label">Username</label>
+              <label for="profile-username" class="form-label" style="margin: 0;">Username</label>
               <input type="text" id="profile-username">
             </div>
             
