--- a/profile.html
+++ b/profile.html
@@ -75,7 +75,7 @@
             </div>
             <div class="mb-3 rounded-pill d-flex align-items-center border border-dark px-3">
               <label for="profile-username" class="form-label" style="margin: 0 10px 0 0;">Username</label>
-              <input type="text" class="form-control" id="profile-username" style="border: none; background-color: transparent;">
+              <input type="text" class="form-control" id="profile-username" style="border: none; background-color: transparent; box-shadow: none;">
             </div>
             
             <button type="submit" class="btn btn-primary">Submit</button>
