--- a/profile.html
+++ b/profile.html
@@ -4,6 +4,13 @@
     <meta charset="utf-8">
     <title>Profile</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <style>
+      .form-control{
+        border: none; 
+        background-color: transparent; 
+        box-shadow: none;
+      }
+    </style>
   </head>
   <body>
     <!--Sticky Top Nav Bar Section-->
@@ -57,7 +64,7 @@
           <!-- form -->
           <form>
             <h3>Your Profile</h3>
-            <div class="mb-3">
+            <!-- <div class="mb-3">
               <label for="profile-username" class="form-label">Username</label>
               <input type="text" class="form-control" id="profile-username">
             </div>
@@ -72,10 +79,22 @@
             <div class="mb-3">
               <label for="profile-email" class="form-label">Email address</label>
               <input type="email" class="form-control" id="profile-email">
+            </div> -->
+            <div class="mb-3 rounded-pill d-flex align-items-center border border-dark px-3">
+              <label for="profile-username" class="form-label" style="margin: 0 10px 0 0;">Username: </label>
+              <input type="text" class="form-control" id="profile-username">
             </div>
             <div class="mb-3 rounded-pill d-flex align-items-center border border-dark px-3">
-              <label for="profile-username" class="form-label" style="margin: 0 10px 0 0;">Username</label>
-              <input type="text" class="form-control" id="profile-username" style="border: none; background-color: transparent; box-shadow: none;">
+              <label for="profile-firstname" class="form-label" style="margin: 0 10px 0 0;">First Name: </label>
+              <input type="text" class="form-control" id="profile-firstname">
+            </div>
+            <div class="mb-3 rounded-pill d-flex align-items-center border border-dark px-3">
+              <label for="profile-lastname" class="form-label" style="margin: 0 10px 0 0;">Last Name: </label>
+              <input type="text" class="form-control" id="profile-lastname">
+            </div>
+            <div class="mb-3 rounded-pill d-flex align-items-center border border-dark px-3">
+              <label for="profile-email" class="form-label" style="margin: 0 10px 0 0;">Email: </label>
+              <input type="text" class="form-control" id="profile-email">
             </div>
             
             <button type="submit" class="btn btn-primary">Submit</button>
