add CSS for form label

--- a/profile.html
+++ b/profile.html
@@ -10,6 +10,10 @@
         background-color: transparent; 
         box-shadow: none;
       }
+
+      .form-label{
+        margin: 0 10px 0 0;
+      }
     </style>
   </head>
   <body>
@@ -64,36 +68,20 @@
           <!-- form -->
           <form>
             <h3>Your Profile</h3>
-            <!-- <div class="mb-3">
-              <label for="profile-username" class="form-label">Username</label>
-              <input type="text" class="form-control" id="profile-username">
-            </div>
-            <div class="mb-3">
-              <label for="profile-firstname" class="form-label">First Name</label>
-              <input type="text" class="form-control" id="profile-firstname">
-            </div>
-            <div class="mb-3">
-              <label for="profile-lastname" class="form-label">Last Name</label>
-              <input type="text" class="form-control" id="profile-lastname">
-            </div>
-            <div class="mb-3">
-              <label for="profile-email" class="form-label">Email address</label>
-              <input type="email" class="form-control" id="profile-email">
-            </div> -->
-            <div class="mb-3 rounded-pill d-flex align-items-center border border-dark px-3">
-              <label for="profile-username" class="form-label" style="margin: 0 10px 0 0;">Username: </label>
+            <div class="mb-3 rounded-pill d-flex border border-dark px-3">
+              <label for="profile-username" class="form-label">Username: </label>
               <input type="text" class="form-control" id="profile-username">
             </div>
             <div class="mb-3 rounded-pill d-flex align-items-center border border-dark px-3">
-              <label for="profile-firstname" class="form-label" style="margin: 0 10px 0 0;">First Name: </label>
+              <label for="profile-firstname" class="form-label">First Name: </label>
               <input type="text" class="form-control" id="profile-firstname">
             </div>
             <div class="mb-3 rounded-pill d-flex align-items-center border border-dark px-3">
-              <label for="profile-lastname" class="form-label" style="margin: 0 10px 0 0;">Last Name: </label>
+              <label for="profile-lastname" class="form-label">Last Name: </label>
               <input type="text" class="form-control" id="profile-lastname">
             </div>
             <div class="mb-3 rounded-pill d-flex align-items-center border border-dark px-3">
-              <label for="profile-email" class="form-label" style="margin: 0 10px 0 0;">Email: </label>
+              <label for="profile-email" class="form-label">Email: </label>
               <input type="text" class="form-control" id="profile-email">
             </div>
             
