remove align-item-center class from form input

--- a/profile.html
+++ b/profile.html
@@ -72,15 +72,15 @@
               <label for="profile-username" class="form-label">Username: </label>
               <input type="text" class="form-control" id="profile-username">
             </div>
-            <div class="mb-3 rounded-pill d-flex align-items-center border border-dark px-3">
+            <div class="mb-3 rounded-pill d-flex border border-dark px-3">
               <label for="profile-firstname" class="form-label">First Name: </label>
               <input type="text" class="form-control" id="profile-firstname">
             </div>
-            <div class="mb-3 rounded-pill d-flex align-items-center border border-dark px-3">
+            <div class="mb-3 rounded-pill d-flexborder border-dark px-3">
               <label for="profile-lastname" class="form-label">Last Name: </label>
               <input type="text" class="form-control" id="profile-lastname">
             </div>
-            <div class="mb-3 rounded-pill d-flex align-items-center border border-dark px-3">
+            <div class="mb-3 rounded-pill d-flex border border-dark px-3">
               <label for="profile-email" class="form-label">Email: </label>
               <input type="text" class="form-control" id="profile-email">
             </div>
