--- a/profile.html
+++ b/profile.html
@@ -5,21 +5,26 @@
     <title>Profile</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <style>
-      .form-control{
+      #profile-LeftBar ul {
+        padding: 0;
+        margin: 0;
+      }
+
+      #profile-LeftBar li {
+        list-style: none;
+      }
+
+      .form-control {
         border: none; 
         background-color: transparent; 
       }
 
-      .form-label{
+      .form-label {
         margin: 0 10px 0 0;
       }
 
-      .formLabelContainer{
-        width: 15%;
-      }
-
-      .formInputContainer{
-        width: 85%;
+      .formLabelContainer {
+        padding: 0;
       }
 
       .formInputContainer > input:focus {
@@ -70,16 +75,21 @@
     <div class="container">
       <div class="row">
         <!-- Left side bar for menu selection (Edit profile / Change Password) -->
-        <div id="profile-LeftBar" class="col-3" style="border: 3px solid red;">
+        <div id="profile-LeftBar" class="col-lg-2 col-12" style="border: 3px solid red;">
           <ul>
             <li>Edit Profile</li>
             <li>Change Password</li>
           </ul>
         </div>
-        <div id="profile-RightBar" class="col-9" style="border: 3px solid blue;">
+        
+        <!-- empty for spacing -->
+        <div class="col-1"></div>
+
+        <div id="profile-RightBar" class="col-lg-9 col-12" style="border: 3px solid blue;">
           <!-- Right side bar for form display of information -->
           <form>
             <h3>Your Profile</h3>
+
             <div class="mb-3 mx-1 px-3 rounded-pill border border-dark d-flex align-items-center">
               <div class="formLabelContainer">
                 <label for="profile-username" class="form-label">Username: </label>
@@ -88,6 +98,7 @@
                 <input type="text" class="form-control" id="profile-username">
               </div>
             </div>
+
             <div class="mb-3 mx-1 px-3 rounded-pill border border-dark d-flex align-items-center">
               <div class="formLabelContainer">
                 <label for="profile-firstname" class="form-label">First Name: </label>
@@ -96,6 +107,7 @@
                 <input type="text" class="form-control" id="profile-firstname">
               </div>
             </div>
+
             <div class="mb-3 mx-1 px-3 rounded-pill border border-dark d-flex align-items-center">
               <div class="formLabelContainer">
                 <label for="profile-lastname" class="form-label">Last Name: </label>
@@ -104,15 +116,16 @@
                 <input type="text" class="form-control" id="profile-lastname">
               </div>
             </div>
+
             <div class="mb-3 mx-1 px-3 rounded-pill border border-dark d-flex align-items-center">
               <div class="formLabelContainer">
-                <label for="profile-email" class="form-label">Email: </label>
+                <label for="profile-email" class="form-label">Email Addr: </label>
               </div>
               <div class="formInputContainer">
                 <input type="text" class="form-control" id="profile-email">
               </div>
             </div>
-            
+
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>
         </div>
