Task_List.html File Skeleton
Carousel Section, Notes Section as well as description section is done up. Left API implementation as well as the pop-up which will show upon pressing call to action buttons.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <a class="navbar-brand" href="#">RoofBlanket</a>
     <!-- End Of Navbar Logo -->
 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
@@ -40,10 +40,10 @@
           <a class="nav-link" href="#">Profile</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link" href="#">Message</a>
         </li>
         <li class="nav-item" style="margin-right: 30px;">
-          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link" href="#">Task List</a>
         </li>
         <li class="nav-item">
           <button type="button" class="btn btn-outline-primary" href="login.html">Login</button>
