--- a/login.html
+++ b/login.html
@@ -12,7 +12,8 @@
   <div class="container">
     <div class="row"> 
       <div class="text-center">
-        <!-- Register (Hidden) -->
+
+        <!-- Register Pop Up Box (Hidden by Default) -->
         <div class="register" id='register'>
           <h2 style="margin:40px 0px">Create Account</h2>
           <input class="mb-3 form-control" type="text" name="newUsername" placeholder="Username: "><br>
@@ -25,7 +26,7 @@
         </div>
 
 
-        <!-- Reset Password (Hidden) -->
+        <!-- Reset Password Pop Up Box (Hidden by Default) -->
         <div class="reset" id='reset'>
           <h2 style="margin:40px 0px">Reset Password</h2>
           <input class="mb-3 form-control" type="text" name="newEmail" placeholder="Email: "><br>
@@ -33,7 +34,7 @@
           <button class="btn btn-primary mb-3" type="submit" name="cancel" onclick="closeReset()">Cancel</button>
         </div>
 
-        <!-- Main Login -->
+        <!-- Main Login (Shown First) -->
         <div id="main">
           <img src="icons/profile.png" style="width:100px; height:100px;" class="mb-3">
           <h2 class="mb-3">Login</h2>
