--- a/profile.html
+++ b/profile.html
@@ -15,6 +15,39 @@
         list-style: none;
       }
 
+      #profile-container img {
+        width: 100px;
+        height: 100px;
+      }
+
+      #profile-container {
+        border-radius: 50%;
+        width: 100px;
+        height: 100px;
+        overflow: hidden;
+      }
+
+      #profileImage{
+        cursor: pointer;
+      }
+
+      #profile-row {
+        display: flex;
+        align-items: flex-end;
+      }
+
+      #imageUpload{
+        display: none;
+      }
+
+      #select-image-label {
+        border: 1px solid black;
+        padding: 0 10px;
+        margin-bottom: 10px;
+        border-radius: 20px;
+        cursor: pointer;
+      }
+
       .form-control {
         border: none; 
         background-color: transparent; 
@@ -89,6 +122,17 @@
         <div id="profile-RightBar" class="col-lg-9 col-12" style="border: 3px solid blue;">
           <!-- Right side bar for form display of information -->
           <form>
+            <!-- Circle profile photo -->
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+            <div id="profile-row">
+              <div id="profile-container">
+                <img id="profileImage" src="https://t3.ftcdn.net/jpg/03/46/83/96/360_F_346839683_6nAPzbhpSkIpb8pmAwufkC7c5eD7wYws.jpg" />
+              </div>
+              <label for="imageUpload" id="select-image-label">Select Image</label>
+              <input id="imageUpload" type="file" name="profile_photo" placeholder="Photo" required="" capture>
+            </div>
+            <!-- end of Circle profile photo -->
+
             <h3>Your Profile</h3>
 
             <div class="mb-3 mx-1 px-3 rounded-pill border border-dark d-flex align-items-center">
@@ -120,7 +164,7 @@
 
             <div class="mb-3 mx-1 px-3 rounded-pill border border-dark d-flex align-items-center">
               <div class="formLabelContainer">
-                <label for="profile-email" class="form-label">Email Addr: </label>
+                <label for="profile-email" class="form-label">Email: </label>
               </div>
               <div class="formInputContainer">
                 <input type="text" class="form-control" id="profile-email">
@@ -135,5 +179,31 @@
 
     <!-- End of Container -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+
+    <!-- script for profile image upload -->
+    <script>
+      // Upload image for profile picture script
+      $("#profileImage").click(function(e) {
+        $("#imageUpload").click();
+      });
+
+      // preview image on browser
+      function fasterPreview( uploader ) {
+        if ( uploader.files && uploader.files[0] )
+        {
+          $('#profileImage').attr('src', window.URL.createObjectURL(uploader.files[0]) );
+        }
+      }
+
+      $("#imageUpload").change(function(){
+        fasterPreview( this );
+      });
+
+      // retrieve name of uploaded image
+      $("#imageUpload").change(function() {
+        filename = this.files[0].name;
+        console.log(filename);
+      });
+    </script>
   </body>
 </html>
