remove capture attribute for profile picture

--- a/profile.html
+++ b/profile.html
@@ -129,7 +129,7 @@
                 <img id="profileImage" src="https://t3.ftcdn.net/jpg/03/46/83/96/360_F_346839683_6nAPzbhpSkIpb8pmAwufkC7c5eD7wYws.jpg" />
               </div>
               <label for="imageUpload" id="select-image-label">Select Image</label>
-              <input id="imageUpload" type="file" name="profile_photo" placeholder="Photo" required="" capture>
+              <input id="imageUpload" type="file" name="profile_photo" placeholder="Photo" required="">
             </div>
             <!-- end of Circle profile photo -->
 
