remove padding class for form
minor adjustment for looks

--- a/profile.html
+++ b/profile.html
@@ -123,7 +123,7 @@
 
         <div id="profile-RightBar" class="col-lg-9 col-12" style="border: 3px solid blue;">
           <!-- Right side bar for form display of information -->
-          <form class="p-3">
+          <form>
             <!-- Circle profile photo -->
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
             <div id="profile-row">
