--- a/listing.html
+++ b/listing.html
@@ -6,8 +6,14 @@
     <!-- BootStrap CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="listing.css">
+    <!-- script needed for map -->
+    <script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js" integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg=" crossorigin=""></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css" integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14=" crossorigin="" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <!-- end script needed for map -->
+    <script type="text/javascript" src="./script.js"></script>
   </head>
-  <body>
+  <body onload="getLocation()">
 
     <!--Sticky Top Nav Bar Section-->
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light px-5">
@@ -148,7 +154,7 @@
       
       <div class="listing-map">
         <!-- API Integration here-->
-        <h1>Hello world</h1>
+        <div id="map"></div>
       </div>
 
       <div class="notes-content">
