--- a/task_list.html
+++ b/task_list.html
@@ -6,6 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   </head>
   <body>
+    
     <!--Sticky Top Nav Bar Section-->
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light px-5">
       <!-- Navbar Logo -->
@@ -39,10 +40,58 @@
         </ul>
         <!-- End Of Nav Links-->
       </div>
-    <!-- End Of Nav Bar Content -->
+      <!-- End Of Nav Bar Content -->
     </nav>
-  <!-- End Of Sticky Top Nav Bar Section -->
-    <h1>Hello, world!</h1>
+    <!-- End Of Sticky Top Nav Bar Section -->
+
+    <!-- Start Of Body Content -->
+    <div class="container-fluid" style="width: 80%;">
+      <h2 class="mt-5">Task List</h2>
+      <!-- Task Content -->
+      <!--Ol for numbering of tasks-->
+      <ol class="list-group list-group-numbered">
+        <li class="list-group-item d-flex justify-content-between align-items-start align-items-center">
+          <!-- Image Profile -->
+          <img src="/icons/colored_profile.png" style="width: 50px; height: 50px;">
+          <div class="ms-2 me-auto">
+            <!-- Name -->
+            <div class="fw-bold">Jeff So</div>
+            <!-- Body Content -->
+            <!-- Content for list item -->
+          </div>
+          <!-- Task List Group 1 Buttons-->
+          <span class="btn btn-primary rounded-pill mx-2">Create</span>
+          <span class="btn btn-primary rounded-pill mx-2">Release</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-start align-items-center">
+          <!-- Image Profile -->
+          <img src="/icons/colored_profile.png" style="width: 50px; height: 50px;">
+          <div class="ms-2 me-auto">
+            <!-- Task List 2 Name -->
+            <div class="fw-bold">Ren Kee</div>
+            <!-- Body Content 2-->
+            Content for list item
+          </div>
+          <!-- Task List Group 2 Buttons-->
+          <span class="btn btn-primary rounded-pill mx-2">Create</span>
+          <span class="btn btn-primary rounded-pill mx-2">Release</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-start align-items-center">
+          <!-- Image Profile -->
+          <img src="/icons/colored_profile.png" style="width: 50px; height: 50px;">
+          <div class="ms-2 me-auto">
+            <!-- Task List 3 Name -->
+            <div class="fw-bold">Wai Soon</div>
+            <!-- Body Content 3-->
+            Content for list item
+          </div>
+          <!-- Task List Group 3 Buttons-->
+          <span class="btn btn-primary rounded-pill mx-2">Create</span>
+          <span class="btn btn-primary rounded-pill mx-2">Release</span>
+        </li>
+      </ol>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   </body>
 </html>
