Updated add_person skeleton

--- a/chat.html
+++ b/chat.html
@@ -57,8 +57,7 @@
     <!-- Start Of Body Content-->   
     <div class="container my-2" id="main">
       <div class="row">
-        <h2 class="mb-5">Chat</h2>
-
+        <h2 class="mt-3 mb-3">Chat</h2>
         <!-- Inbox Side (Left)-->
         <div class="col-md-3 inbox">
           <!-- Search Box -->
@@ -99,49 +98,49 @@
           <div class='container-fluid' id="bottomHalf">
             <div class="chat-panel">
               <div class="row no-gutters">
-              <div class="col-md-3">
+              <div class="col-md-4">
                 <div class="chat-bubble chat-bubble--left">
                 Hello dude!
                 </div>
               </div>
               </div>
               <div class="row no-gutters">
-              <div class="col-md-3 offset-md-9">
+              <div class="col-md-4 offset-md-8">
                 <div class="chat-bubble chat-bubble--right">
                 Hello dude!
                 </div>
               </div>
               </div>
               <div class="row no-gutters">
-              <div class="col-md-3 offset-md-9">
+              <div class="col-md-4 offset-md-8">
                 <div class="chat-bubble chat-bubble--right">
                 Hello dude!
                 </div>
               </div>
               </div>
               <div class="row no-gutters">
-              <div class="col-md-3">
+              <div class="col-md-4">
                 <div class="chat-bubble chat-bubble--left">
                 Hello dude!
                 </div>
               </div>
               </div>
               <div class="row no-gutters">
-              <div class="col-md-3">
+              <div class="col-md-4">
                 <div class="chat-bubble chat-bubble--left">
                 Hello dude!
                 </div>
               </div>
               </div>
               <div class="row no-gutters">
-              <div class="col-md-3">
+              <div class="col-md-4">
                 <div class="chat-bubble chat-bubble--left">
                 Hello dude!
                 </div>
               </div>
               </div>
               <div class="row no-gutters">
-              <div class="col-md-3 offset-md-9">
+              <div class="col-md-4 offset-md-8">
                 <div class="chat-bubble chat-bubble--right">
                 Testing super duper to see if it breaks line and its 2:32am rn 
                 </div>
