--- a/add_person.html
+++ b/add_person.html
@@ -2,11 +2,158 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>Add Person</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <!--Sticky Top Nav Bar Section-->
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light px-5">
+
+      <!-- Navbar Logo -->
+      <a class="navbar-brand" href="#">RoofBlanket</a>
+      <!-- End Of Navbar Logo -->
+
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <!-- Nav Bar Content -->
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <!--Nav Links-->
+        <ul class="navbar-nav">
+          <!--Call User's Profile Name-->
+          <li class="navbar-text mx-5">
+            Hello, Wai Soon
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Profile</a>
+          </li> 
+          <li class="nav-item">
+            <a class="nav-link" href="#">Features</a>
+          </li>
+          <li class="nav-item" style="margin-right: 30px;">
+            <a class="nav-link" href="#">Pricing</a>
+          </li>
+          <li class="nav-item">
+            <button type="button" class="btn btn-outline-primary" href="login.html">Login</button>
+          </li>
+        </ul>
+        <!-- End Of Nav Links-->
+      </div>
+      <!-- End Of Nav Bar Content -->
+    </nav>
+    <!-- End Of Sticky Top Nav Bar Section -->
+
+
+    <!-- Start Of Body Content-->   
+    <div class="container my-2" id="main">
+      <div class="row">
+        <h2 class="mt-3">Who are you Listing</h2>
+        <p class="fw-light">Being nice goes a long way</p>
+        <!-- Add Image Side (Left) -->
+        <div class="col-md-5 me-2 image d-flex text-center">
+          <div class="image-drawer my-3">
+            <img src="./icons/add_image.png" height="80px" width="80px"><br>
+            <button class="btn btn-secondary mt-2">Add Photos</button>
+          </div>
+        </div>
+
+        <!-- Input Side (Right)-->
+        <div class="col-md-6 input">
+          <form action="">
+            <!-- Person Name -->
+            <div class="mb-3 mt-3">
+              <input type="text" class="form-control" placeholder="Person Name: ">
+            </div>
+            <!-- Person Age -->
+            <div class="mb-3 mt-3">
+              <input type="number" class="form-control" placeholder="Age: ">
+            </div>
+            <!-- API Integration Here for Location-->
+            <div class="mb-3 mt-3">
+              <input type="text" class="form-control" placeholder="Location: ">
+            </div>
+            <!-- Person Duration of Stay -->
+            <div id='duration' class="mb-3 mt-3 d-flex">
+              <p class="col-6-md">Duration: </p>
+              <select class="form-select">
+                <option selected>Choose period of occupancy</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10</option>
+                <option value="11">11</option>
+                <option value="12">12</option>
+              </select>
+            </div>
+            <!-- Person Gender -->
+            <div id="gender" class="d-flex">
+              <p>Gender: </p>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="checkbox" value="male">
+                <label class="form-check-label" for="inlineCheckbox1">Male</label>
+              </div>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="checkbox" value="female">
+                <label class="form-check-label" for="inlineCheckbox2">Female</label>
+              </div>
+            </div>
+            <!-- Person Special  -->
+            <div id="special" class="d-flex">
+              <p>Special Needs: </p>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="checkbox" value="yes">
+                <label class="form-check-label" for="inlineCheckbox1">Yes</label>
+              </div>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="checkbox" value="no">
+                <label class="form-check-label" for="inlineCheckbox2">No</label>
+              </div>
+            </div>
+            <!-- Person Employment -->
+            <div id="employment" class="d-flex">
+              <p>Seeking Employment: </p>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="checkbox" value="yes">
+                <label class="form-check-label" for="inlineCheckbox1">Yes</label>
+              </div>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="checkbox" value="no">
+                <label class="form-check-label" for="inlineCheckbox2">No</label>
+              </div>
+            </div>
+            <!-- Person Description -->
+            <div class="mb-3">
+              <textarea class="form-control" rows="6" name="description" placeholder="Description: "></textarea>
+            </div>
+            <!-- Buttons -->
+            <div class="d-grid gap-2 d-md-flex justify-content-md-end mb-3">
+              <button class="btn btn-light me-md-2" type="submit">Cancel</button>
+              <button class="btn btn-danger" type="button">Upload</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   </body>
+  <style>
+    .image {
+      border: 2px dotted black;
+    }
+    .input {
+      border: 2px dotted black;
+    }
+    .image-drawer {
+      margin: auto;
+    }
+  </style>
 </html>
