--- a/profile.html
+++ b/profile.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Profile</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <script type="text/javascript" src="./script.js"></script>
     <style>
       #profile-LeftBar ul {
         padding: 0;
@@ -28,8 +29,8 @@
       }
 
       #profileImage,
-      #edit-profile,
-      #change-password {
+      #edit-profile-btn,
+      #change-password-btn {
         cursor: pointer;
       }
 
@@ -66,9 +67,13 @@
       .formInputContainer > input:focus {
         box-shadow: none;
       }
+
+      form h3 {
+        margin-bottom: 10px;
+      }
     </style>
   </head>
-  <body>
+  <body onload="displayEditProfileForm()">
     <!--Sticky Top Nav Bar Section-->
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light px-5">
       <!-- Navbar Logo -->
@@ -113,8 +118,8 @@
         <!-- Left side bar for menu selection (Edit profile / Change Password) -->
         <div id="profile-LeftBar" class="col-lg-2 col-12" style="border: 3px solid red;">
           <ul>
-            <li id="edit-profile">Edit Profile</li>
-            <li id="change-password">Change Password</li>
+            <li id="edit-profile-btn" onclick="displayEditProfileForm()">Edit Profile</li>
+            <li id="change-password-btn" onclick="displayChangePasswordForm()">Change Password</li>
           </ul>
         </div>
         
@@ -123,7 +128,7 @@
 
         <div id="profile-RightBar" class="col-lg-9 col-12" style="border: 3px solid blue;">
           <!-- Right side bar for form display of information -->
-          <form>
+          <form id = edit-profile-container>
             <!-- Circle profile photo -->
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
             <div id="profile-row">
@@ -170,6 +175,40 @@
               </div>
               <div class="formInputContainer">
                 <input type="text" class="form-control" id="profile-email">
+              </div>
+            </div>
+
+            <div class="d-flex justify-content-end px-1 mt-4">
+              <button type="submit" class="btn btn-primary">Save Changes</button>
+            </div>
+          </form>
+          <form id="change-password-container">
+            <h3>Change Password</h3>
+
+            <div class="mb-3 mx-1 px-3 rounded-pill border border-dark d-flex align-items-center">
+              <div class="formLabelContainer">
+                <label for="profile-current-password" class="form-label">Current Password: </label>
+              </div>
+              <div class="formInputContainer">
+                <input type="text" class="form-control" id="profile-current-password">
+              </div>
+            </div>
+
+            <div class="mb-3 mx-1 px-3 rounded-pill border border-dark d-flex align-items-center">
+              <div class="formLabelContainer">
+                <label for="profile-new-password" class="form-label">New Password: </label>
+              </div>
+              <div class="formInputContainer">
+                <input type="text" class="form-control" id="profile-new-password">
+              </div>
+            </div>
+
+            <div class="mb-3 mx-1 px-3 rounded-pill border border-dark d-flex align-items-center">
+              <div class="formLabelContainer">
+                <label for="profile-confirm-password" class="form-label">Confirm Password: </label>
+              </div>
+              <div class="formInputContainer">
+                <input type="text" class="form-control" id="profile-confirm-password">
               </div>
             </div>
 
