add button selected - border left indicator

--- a/profile.html
+++ b/profile.html
@@ -116,7 +116,7 @@
     <div class="container">
       <div class="row">
         <!-- Left side bar for menu selection (Edit profile / Change Password) -->
-        <div id="profile-LeftBar" class="col-lg-2 col-12" style="border: 3px solid red;">
+        <div id="profile-LeftBar" class="col-lg-2 col-12">
           <ul>
             <li id="edit-profile-btn" onclick="displayEditProfileForm()">Edit Profile</li>
             <li id="change-password-btn" onclick="displayChangePasswordForm()">Change Password</li>
@@ -126,7 +126,7 @@
         <!-- empty for spacing -->
         <div class="col-1"></div>
 
-        <div id="profile-RightBar" class="col-lg-9 col-12" style="border: 3px solid blue;">
+        <div id="profile-RightBar" class="col-lg-9 col-12">
           <!-- Right side bar for form display of information -->
           <form id = edit-profile-container>
             <!-- Circle profile photo -->
