--- a/profile.html
+++ b/profile.html
@@ -7,6 +7,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script type="text/javascript" src="./script.js"></script>
     <style>
+      * {
+        padding: 0;
+        margin: 0;
+      }
+
       #profile-LeftBar ul {
         padding: 0;
         margin: 0;
@@ -113,7 +118,7 @@
 
     
     <!-- Container -->
-    <div class="container">
+    <div class="container pt-5">
       <div class="row">
         <!-- Left side bar for menu selection (Edit profile / Change Password) -->
         <div id="profile-LeftBar" class="col-lg-2 col-12">
@@ -126,7 +131,7 @@
         <!-- empty for spacing -->
         <div class="col-1"></div>
 
-        <div id="profile-RightBar" class="col-lg-9 col-12">
+        <div id="profile-RightBar" class="col-lg-9 col-12 border border-dark rounded p-4">
           <!-- Right side bar for form display of information -->
           <form id = edit-profile-container>
             <!-- Circle profile photo -->
