--- a/add_person.html
+++ b/add_person.html
@@ -75,9 +75,9 @@
               <input type="text" class="form-control" placeholder="Location: ">
             </div>
             <!-- Person Duration of Stay -->
-            <div id='duration' class="mb-3 mt-3 d-flex">
-              <p class="col-6-md">Duration: </p>
-              <select class="form-select">
+            <div id='duration' class="d-flex">
+              <p class="col-6-md mt-1" style="margin-right: 10px;">Duration: </p>
+              <select class="form-select" style="height: 38px;">
                 <option selected>Choose period of occupancy</option>
                 <option value="1">1</option>
                 <option value="2">2</option>
