--- a/task_list.html
+++ b/task_list.html
@@ -78,7 +78,7 @@
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-start align-items-center">
           <!-- Image Profile -->
-          <img src="/icons/colored_profile.png" style="width: 50px; height: 50px;">
+          <img src="./icons/colored_profile.png" style="width: 50px; height: 50px;">
           <div class="ms-2 me-auto">
             <!-- Task List 3 Name -->
             <div class="fw-bold">Wai Soon</div>
