--- a/task_list.html
+++ b/task_list.html
@@ -52,7 +52,7 @@
       <ol class="list-group list-group-numbered">
         <li class="list-group-item d-flex justify-content-between align-items-start align-items-center">
           <!-- Image Profile -->
-          <img src="/icons/colored_profile.png" style="width: 50px; height: 50px;">
+          <img src="./icons/colored_profile.png" style="width: 50px; height: 50px;">
           <div class="ms-2 me-auto">
             <!-- Name -->
             <div class="fw-bold">Jeff So</div>
@@ -65,7 +65,7 @@
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-start align-items-center">
           <!-- Image Profile -->
-          <img src="/icons/colored_profile.png" style="width: 50px; height: 50px;">
+          <img src="./icons/colored_profile.png" style="width: 50px; height: 50px;">
           <div class="ms-2 me-auto">
             <!-- Task List 2 Name -->
             <div class="fw-bold">Ren Kee</div>
