add pop up for task_list and modified login.html

--- a/login.html
+++ b/login.html
@@ -11,17 +11,16 @@
 
 <body>
   <div class="container">
-    <div class="row"> 
-      <div class="text-center">
+    <div class="row text-center my-5"> 
 
         <!-- Register Pop Up Box (Hidden by Default) -->
         <div class="register" id='register'>
-          <h2 style="margin:40px 0px">Create Account</h2>
+          <h2 class="my-3">Create Account</h2>
           <input class="mb-3 form-control" type="text" name="newUsername" placeholder="Username: "><br>
           <input class="mb-3 form-control" type="text" name="newEmail" placeholder="Email: "><br>
           <input class="mb-3 form-control" type="text" name="newAddress" placeholder="Address: "><br>
           <input class="mb-3 form-control" type="password" name="newPassword" placeholder="Password: "><br>
-          <input class="mb-3 form-control" type="password" name="newConfirmPassword" placeholder="Confirm Password: "><br><br><br>
+          <input class="mb-3 form-control" type="password" name="newConfirmPassword" placeholder="Confirm Password: "><br>
           <button class="btn btn-primary mb-3" type="submit" name="create">Create</button>
           <button class="btn btn-primary mb-3" type="submit" name="cancel" onclick="closeRegister()">Cancel</button>
         </div>
@@ -29,7 +28,7 @@
 
         <!-- Reset Password Pop Up Box (Hidden by Default) -->
         <div class="reset" id='reset'>
-          <h2 style="margin:40px 0px">Reset Password</h2>
+          <h2 class="my-3">Reset Password</h2>
           <input class="mb-3 form-control" type="text" name="newEmail" placeholder="Email: "><br>
           <button class="btn btn-primary mb-3" type="submit" name="create">Reset</button>
           <button class="btn btn-primary mb-3" type="submit" name="cancel" onclick="closeReset()">Cancel</button>
@@ -54,7 +53,6 @@
           <hr>
           <button class="btn btn-primary mb-3" type="submit">Sign in With Google</button>
         </div>
-      </div>
     </div>
   </div>
 
@@ -68,19 +66,19 @@
     let main = document.getElementById('main')
 
     function openRegister() {
-      register.classList.add('open-register')
+      register.classList.add('open-visible')
       main.classList.add('blur')
     }
     function closeRegister() {
-      register.classList.remove('open-register')
+      register.classList.remove('open-visible')
       main.classList.remove('blur')
     }
     function openReset() {
-      forget.classList.add('open-reset')
+      forget.classList.add('open-visible')
       main.classList.add('blur')
     }
     function closeReset() {
-      forget.classList.remove('open-reset')
+      forget.classList.remove('open-visible')
       main.classList.remove('blur')
     }
   </script>
@@ -90,7 +88,6 @@
 <style>
   .container {
     width: 80%;
-    margin-top: 120px;
   }
   .register, .reset {
     background-color: beige;
@@ -103,14 +100,11 @@
     left: 25%;
     z-index: 1;
   }
-  .open-register {
+  .open-visible {
     visibility: visible;
   }
   .blur {
     filter: blur(5px);
-  }
-  .open-reset {
-    visibility: visible;
   }
 </style>
 
