--- a/task_list.html
+++ b/task_list.html
@@ -46,52 +46,119 @@
 
     <!-- Start Of Body Content -->
     <div class="container-fluid" style="width: 80%;">
-      <h2 class="mt-5">Task List</h2>
-      <!-- Task Content -->
-      <!--Ol for numbering of tasks-->
-      <ol class="list-group list-group-numbered">
-        <li class="list-group-item d-flex justify-content-between align-items-start align-items-center">
-          <!-- Image Profile -->
-          <img src="./icons/colored_profile.png" style="width: 50px; height: 50px;">
-          <div class="ms-2 me-auto">
-            <!-- Name -->
-            <div class="fw-bold">Jeff So</div>
-            <!-- Body Content -->
-            <!-- Content for list item -->
-          </div>
-          <!-- Task List Group 1 Buttons-->
-          <span class="btn btn-primary rounded-pill mx-2">Create</span>
-          <span class="btn btn-primary rounded-pill mx-2">Release</span>
-        </li>
-        <li class="list-group-item d-flex justify-content-between align-items-start align-items-center">
-          <!-- Image Profile -->
-          <img src="./icons/colored_profile.png" style="width: 50px; height: 50px;">
-          <div class="ms-2 me-auto">
-            <!-- Task List 2 Name -->
-            <div class="fw-bold">Ren Kee</div>
-            <!-- Body Content 2-->
-            Content for list item
-          </div>
-          <!-- Task List Group 2 Buttons-->
-          <span class="btn btn-primary rounded-pill mx-2">Create</span>
-          <span class="btn btn-primary rounded-pill mx-2">Release</span>
-        </li>
-        <li class="list-group-item d-flex justify-content-between align-items-start align-items-center">
-          <!-- Image Profile -->
-          <img src="./icons/colored_profile.png" style="width: 50px; height: 50px;">
-          <div class="ms-2 me-auto">
-            <!-- Task List 3 Name -->
-            <div class="fw-bold">Wai Soon</div>
-            <!-- Body Content 3-->
-            Content for list item
-          </div>
-          <!-- Task List Group 3 Buttons-->
-          <span class="btn btn-primary rounded-pill mx-2">Create</span>
-          <span class="btn btn-primary rounded-pill mx-2">Release</span>
-        </li>
-      </ol>
+
+      <!-- Add Employment Details Pop Up Box (Hidden By Default) -->
+      <div class='employment text-center' id='employment'>
+        <h2 class="my-3">Add Employment Information</h2>
+        <input class="mb-3 form-control" type="text" name="newUsername" placeholder="Username: "><br>
+        <input class="mb-3 form-control" type="text" name="newEmail" placeholder="Email: "><br>
+        <input class="mb-3 form-control" type="text" name="newAddress" placeholder="Address: "><br>
+        <input class="mb-3 form-control" type="password" name="newPassword" placeholder="Password: "><br>
+        <input class="mb-3 form-control" type="password" name="newConfirmPassword" placeholder="Confirm Password: "><br>
+        <button class="btn btn-primary mb-3" type="submit" name="submit">Submit</button>
+        <button class="btn btn-primary mb-3" type="submit" name="cancel" onclick="closeEmployment()">Cancel</button>
+      </div>
+
+      <!-- Release Pop Up Box (Hidden By Default) Data Fetch Here -->
+      <div class='release text-center' id='release'>
+        <h5 style="margin:40px 0px">Before Proceeding, do ensure that both parties have come to mutual agreement. Procced?</h5>
+        <button class="btn btn-primary mb-3" type="submit" name="yes">Yes</button>
+        <button class="btn btn-primary mb-3" type="submit" name="no" onclick="closeRelease()">No</button>
+      </div>
+
+      <!-- Main Body starts here -->
+      <div id="main">
+        <h2 class="mt-5">Task List</h2>
+        <!-- Task Content -->
+        <!--Ol for numbering of tasks-->
+        <ol class="list-group list-group-numbered">
+          <li class="list-group-item d-flex justify-content-between align-items-start align-items-center">
+            <!-- Image Profile -->
+            <img src="./icons/colored_profile.png" style="width: 50px; height: 50px;">
+            <div class="ms-2 me-auto">
+              <!-- Name -->
+              <div class="fw-bold">Jeff So</div>
+              <!-- Body Content -->
+              <!-- Content for list item -->
+            </div>
+            <!-- Task List Group 1 Buttons-->
+            <span class="btn btn-primary rounded-pill mx-2" onclick="openEmployment()">Create</span>
+            <span class="btn btn-primary rounded-pill mx-2" onclick="openRelease()">Release</span>
+          </li>
+          <li class="list-group-item d-flex justify-content-between align-items-start align-items-center">
+            <!-- Image Profile -->
+            <img src="./icons/colored_profile.png" style="width: 50px; height: 50px;">
+            <div class="ms-2 me-auto">
+              <!-- Task List 2 Name -->
+              <div class="fw-bold">Ren Kee</div>
+              <!-- Body Content 2-->
+              Content for list item
+            </div>
+            <!-- Task List Group 2 Buttons-->
+            <span class="btn btn-primary rounded-pill mx-2" onclick="openEmployment()">Create</span>
+            <span class="btn btn-primary rounded-pill mx-2" onclick="openRelease()">Release</span>
+          </li>
+          <li class="list-group-item d-flex justify-content-between align-items-start align-items-center">
+            <!-- Image Profile -->
+            <img src="./icons/colored_profile.png" style="width: 50px; height: 50px;">
+            <div class="ms-2 me-auto">
+              <!-- Task List 3 Name -->
+              <div class="fw-bold">Wai Soon</div>
+              <!-- Body Content 3-->
+              Content for list item
+            </div>
+            <!-- Task List Group 3 Buttons-->
+            <span class="btn btn-primary rounded-pill mx-2" onclick="openEmployment()">Create</span>
+            <span class="btn btn-primary rounded-pill mx-2" onclick="openRelease()">Release</span>
+          </li>
+        </ol>
+      </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+
+    <script>
+      let release = document.getElementById('release')
+      let employmentDetails = document.getElementById('employment')
+      let main = document.getElementById('main')
+  
+      function openRelease() {
+        release.classList.add('show-release')
+        main.classList.add('blur')
+      }
+      function closeRelease() {
+        release.classList.remove('show-release')
+        main.classList.remove('blur')
+      }
+      function openEmployment() {
+        employmentDetails.classList.add('show-release')
+        main.classList.add('blur')
+      }
+      function closeEmployment() {
+        employmentDetails.classList.remove('show-release')
+        main.classList.remove('blur')
+      }
+
+    </script>
   </body>
+
+  <style>
+    .release, .employment{
+      background-color: beige;
+      border-radius: 5%;
+      padding: 20px;
+      position: absolute;
+      visibility: hidden;
+      width: 50%;
+      top: 10%;
+      left: 25%;
+      z-index: 1;
+    }
+    .show-release {
+      visibility: visible;
+    }
+    .blur {
+      filter: blur(5px);
+    }
+  </style>
 </html>
