rename map elements ID for clarity

--- a/listing.html
+++ b/listing.html
@@ -102,7 +102,7 @@
         <h2 class="my-3 text-center">Update Last Seen Location</h2>
 
         <!-- Integrate Map API here -->
-        <div class='my-5' id="map">
+        <div class='my-5' id="mapUpdate">
           <label for="map" class="form-label">Update Location</label>
         </div>
 
@@ -186,7 +186,7 @@
       
       <div class="listing-map">
         <!-- API Integration here-->
-        <div id="map"></div>
+        <div id="mapListing"></div>
       </div>
 
       <div class="notes-content">
